--- a/package.json
+++ b/package.json
@@ -6,25 +6,38 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "npx jetify && ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "resources": "npm cache clean --force && npm cache verify && cordova-res ios --skip-config --copy && cordova-res android --skip-config --copy && node scripts/resources.js",
+    "cap:add": "npm run build && ionic capacitor add && npx cap sync",
+    "cap:android": "ionic capacitor run android -l --external",
+    "cap:ios": "npm run resources && ionic capacitor run ios --livereload --external",
+    "ng:update": "npm uninstall -g @angular/cli --force && npm cache clean --force && npm install -g @angular/cli@latest --force && ng update --force && npm uninstall --save-dev @angular-cli --force && npm install --save-dev @angular/cli@latest --force && npm install && ng --version",
+    "cdv:update": "npm uninstall -g cordova && npm cache clean --force && npm install -g cordova --force && npm install -g cordova-res --force && npm update -g cordova --force && npm info cordova ",
+    "ion:update": "npm run ng:update && npm run cdv:update && npm uninstall -g ionic && npm cache clean --force && npm i -g @ionic/cli --force && npm install @ionic-native/app-update --force && npm install @capacitor/cli --force && npm install @capacitor/core --force && npm install @capacitor/ios --force && npm install @capacitor/android --force && ng --version && ionic --version"
   },
   "private": true,
   "dependencies": {
     "@angular/common": "~13.0.0",
     "@angular/core": "~13.0.0",
+    "@angular/fire": "^7.2.1",
     "@angular/forms": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@capacitor/android": "^3.4.1",
     "@capacitor/app": "1.1.0",
-    "@capacitor/core": "3.4.1",
+    "@capacitor/core": "^3.4.1",
     "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "^3.4.1",
     "@capacitor/keyboard": "1.2.2",
+    "@capacitor/push-notifications": "^1.0.9",
     "@capacitor/status-bar": "1.0.8",
+    "@ionic-native/app-update": "^5.36.0",
     "@ionic/angular": "^6.0.0",
+    "firebase": "^9.6.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -35,11 +48,11 @@
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.0.1",
+    "@angular/cli": "^13.2.5",
     "@angular/compiler": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0",
     "@angular/language-service": "~13.0.0",
-    "@capacitor/cli": "3.4.1",
+    "@capacitor/cli": "^3.4.1",
     "@ionic/angular-toolkit": "^5.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -52,6 +65,7 @@
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "jetifier": "^2.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
